Day 1: scss setup - restaurants list, restaurant card components complete

--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
     "build": "parcel build index.html"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.10.0",
     "parcel": "^2.10.0",
     "process": "^0.11.10"
   }
